...
    private var cancellables: AnyCancellable?
    private let statusBar: StockStatusBar
    private let data: DataModel
    private var prefPopover: PreferencePopover
    private lazy var timer = Timer()
    private lazy var mainMenuItems = [
        NSMenuItem(title: "Refresh", action: #selector(sendAllTradesToSubscriber), keyEquivalent: ""),
        NSMenuItem.separator(),
        NSMenuItem(title: "Preference", action: #selector(togglePopover), keyEquivalent: ""),
        NSMenuItem(title: "Exit", action: #selector(quitApp), keyEquivalent: "q")
    ]
    
    // MARK: - Initialization
    init(data: DataModel) {
        self.data = data
...
